--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,8 @@ jobs:
     - name: Pre-compile assets
       run: bundle exec rake assets:precompile
     - name: Run RuboCop
-      run: bundle exec rubocop --parallel
+      run: |
+        bundle exec rubocop --parallel
     - uses: nanasess/setup-chromedriver@master      
       
     - name: Checkout code
