--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup Datatbase
       run: |
-        apt-get install -y sqlite3 libsqlite3-dev
+        sudo apt-get install -y sqlite3 libsqlite3-dev
         export RAILS_ENV=test
         bundle exec rake db:create
         bundle exec rake db:schema:load
