--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
         bundle exec rake db:create
         bundle exec rake db:schema:load
         bundle exec rake db:migrate
+        bundle exec rake parallel:create
     - name: Run tests
       run: |
         RAILS_ENV=test bundle exec rake parallel:spec
