--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
         bundle exec rake parallel:create
     - name: Run tests
       run: |
-        bundle exec rake parallel:spec
+        bundle exec rspec
     - name: Upload rspec screenshots
       if: ${{ job.status != 'success' }}
       uses: actions/upload-artifact@master
