--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,12 +43,12 @@ jobs:
         bundle exec rake db:schema:load
         bundle exec rake db:migrate
         bundle exec rake parallel:create
-    - name: Run tests
-      run: |
-        RAILS_ENV=test bundle exec rake parallel:spec
-    - name: Upload rspec screenshots
-      if: ${{ job.status != 'success' }}
-      uses: actions/upload-artifact@master
-      with:
-        name: rspec-screenshots
-        path: tmp/screenshots
+    #- name: Run tests
+      #run: |
+        #bundle exec rake parallel:spec
+    #- name: Upload rspec screenshots
+      #if: ${{ job.status != 'success' }}
+      #uses: actions/upload-artifact@master
+      #with:
+        #name: rspec-screenshots
+        #path: tmp/screenshots
