--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup Datatbase
       run: |
-        bundle exec rake db:migrate
+        bundle exec db:migrate
     #- name: Run tests
       #run: |
         #bundle exec rake parallel:spec
