--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
       uses: actions/cache@v1
       with:
         path: vendor/bundle
-        key: ${{ runner.os }}-ci-development2-${{ hashFiles('**/Gemfile.lock') }}
+        key: ${{ runner.os }}-ci-${{ hashFiles('**/Gemfile.lock') }}
         restore-keys: |
-          ${{ runner.os }}-ci-development2-
+          ${{ runner.os }}-ci-
     - name: Install Dependencies
       run: |
         gem install bundler -v 1.17.3
@@ -34,11 +34,8 @@ jobs:
     #- name: Run RuboCop
       #run: bundle exec rubocop --parallel
     - uses: nanasess/setup-chromedriver@master
-    - name: Checkout code
-      uses: actions/checkout@v2
     - name: Setup Datatbase
-      run: |
-        bundle exec db:migrate
+      run: bundle exec rake db:migrate
     #- name: Run tests
       #run: |
         #bundle exec rake parallel:spec
