--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,15 @@ jobs:
     - uses: nanasess/setup-chromedriver@master
     - name: Setup Datatbase
       run: bundle exec rake db:migrate
-    #- name: Run tests
-      #run: |
-        #bundle exec rake parallel:spec
-    #- name: Upload rspec screenshots
-      #if: ${{ job.status != 'success' }}
-      #uses: actions/upload-artifact@master
-      #with:
-        #name: rspec-screenshots
-        #path: tmp/screenshots
+    - name: Run tests
+      run: |
+        bundle exec rake parallel:spec
+    - name: Upload rspec screenshots
+      if: ${{ job.status != 'success' }}
+      uses: actions/upload-artifact@master
+      with:
+        name: rspec-screenshots
+        path: tmp/screenshots
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
