--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,13 +35,12 @@ jobs:
       #run: bundle exec rubocop --parallel
     - uses: nanasess/setup-chromedriver@master
       env:
-        APP_URL: 'http://localhost:3000'
+        APP_URL: 'http://127.0.0.1:3000'
     - name: Setup Datatbase
       run: bundle exec rake db:migrate
     - name: Run tests
       run: |
-        export APP_URL=$APP_URL
-        bundle exec rake parallel:spec
+        export APP_URL=$APP_URL bundle exec rake parallel:spec
     - name: Upload rspec screenshots
       if: ${{ job.status != 'success' }}
       uses: actions/upload-artifact@master
