--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,11 @@ jobs:
     #- name: Run RuboCop
       #run: bundle exec rubocop --parallel
     - uses: nanasess/setup-chromedriver@master
-      env:
-        APP_URL: 'http://127.0.0.1:3000'
     - name: Setup Datatbase
       run: bundle exec rake db:migrate
     - name: Run tests
       run: |
-        export APP_URL=$APP_URL bundle exec rake parallel:spec
+        'http://127.0.0.1:3000' bundle exec rake parallel:spec
     - name: Upload rspec screenshots
       if: ${{ job.status != 'success' }}
       uses: actions/upload-artifact@master
