--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,14 @@ jobs:
     #- name: Run RuboCop
       #run: bundle exec rubocop --parallel
     - uses: nanasess/setup-chromedriver@master
-      env:
-        APP_URL: 'http://127.0.0.1'
     - name: Setup Datatbase
       run: bundle exec rake db:migrate
+    - name: Set up environment variables
+      run: |
+        export APP_URL="http://127.0.0.1:${{ github.run_number }}"
     - name: Run tests
       run: |
-        export APP_URL=$APP_URL bundle exec rake spec
+        export APP_URL= "http://127.0.0.1:${{ github.run_number }}" bundle exec rake spec
     - name: Upload rspec screenshots
       if: ${{ job.status != 'success' }}
       uses: actions/upload-artifact@master
