dockerfile and CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,12 +35,14 @@ jobs:
       #run: bundle exec rubocop --parallel
     - uses: nanasess/setup-chromedriver@master
     - name: Setup Datatbase
-      run: bundle exec rake db:migrate
+      run: |
+            bundle execrake db:migrate RAILS_ENV=test
     - name: Run tests
       env:
         APP_URL: http://127.0.0.1:3333
         DATABASE_URL: sqlite3:///db/test.sqlite3
       run: |
+        bundle execrake db:migrate RAILS_ENV=test
         bundle exec rake parallel:spec
     - name: Upload rspec screenshots
       if: ${{ job.status != 'success' }}
