--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
     - uses: nanasess/setup-chromedriver@master
     - name: Setup Datatbase
       run: |
-            bundle exec rake db:migrate RAILS_ENV=test
+            bundle exec rake db:migrate
     - name: Run tests
       env:
         APP_URL: http://127.0.0.1:3333
