--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
             bundle exec rake db:migrate
     - name: Set permissions for /db
-      run: chmod 777 /db
+      run: chmod 777 db
     - name: Run tests
       env:
         APP_URL: http://127.0.0.1:3333
