--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     - uses: nanasess/setup-chromedriver@master
     - name: Setup Datatbase
       run: |
-        cp config/database.yml.example config/database.yml
+        cp config/database.yml config/database.yml
         bundle exec rake db:create
         bundle exec rake db:schema:load
         bundle exec rake db:migrate
