--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,12 @@ jobs:
     - name: Setup Datatbase
       run: |
             bundle exec rake db:migrate
+            sudo chown -R www-data:www-data blog/
+            sudo chmod -R 777 blog/
     - name: Run tests
       env:
         APP_URL: http://127.0.0.1:3333
-        DATABASE_URL: sqlite3://db/test.sqlite3
+        DATABASE_URL: sqlite3:///db/test.sqlite3
       run: |
         bundle exec rake parallel:spec
     - name: Upload rspec screenshots
