--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
             export RAILS_ENV=test
             bundle exec rake db:create
-            bundle exec rake schema:load
+            bundle exec rake db:schema:load
             bundle exec rake db:migrate
             sudo chown -R www-data:www-data blog/
             sudo chmod -R 777 blog/
